WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167621
Fix CMSampleBuffer leak in MediaSampleAVFObjC::createNonDisplayingCopy().
https://bugs.webkit.org/show_bug.cgi?id=167621
Summary
Fix CMSampleBuffer leak in MediaSampleAVFObjC::createNonDisplayingCopy().
Andreas Kling
Reported
2017-01-30 17:34:46 PST
Seen on leaks bot, there's a missing adoptCF waiting to happen.
Attachments
Patch
(1.41 KB, patch)
2017-01-30 17:35 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2017-01-30 17:35:18 PST
Created
attachment 300168
[details]
Patch
Andy Estes
Comment 2
2017-01-30 17:48:34 PST
Comment on
attachment 300168
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=300168&action=review
> Source/WebCore/platform/graphics/avfoundation/objc/MediaSampleAVFObjC.mm:232 > - return MediaSampleAVFObjC::create(newSampleBuffer, m_id); > + return MediaSampleAVFObjC::create(adoptCF(newSampleBuffer).get(), m_id);
This is fine, but we could avoid some retain count churn by changing MediaSampleAVFObjc::create() to take a RetainPtr&&
WebKit Commit Bot
Comment 3
2017-01-30 18:13:30 PST
Comment on
attachment 300168
[details]
Patch Clearing flags on attachment: 300168 Committed
r211399
: <
http://trac.webkit.org/changeset/211399
>
WebKit Commit Bot
Comment 4
2017-01-30 18:13:33 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug