Fix CMSampleBuffer leak in MediaSampleAVFObjC::createNonDisplayingCopy(). <https://webkit.org/b/167621>

Reviewed by Andy Estes.

We were failing to adopt the CMSampleBuffer after copying it. Seen on leaks bot.

* platform/graphics/avfoundation/objc/MediaSampleAVFObjC.mm:
(WebCore::MediaSampleAVFObjC::createNonDisplayingCopy):


Canonical link: https://commits.webkit.org/184639@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211399 268f45cc-cd09-0410-ab3c-d52691b4dbfc